Configure for Vercel deployment

--- a/.env
+++ b/.env
@@ -1,14 +1,6 @@
-# JWT Secret (change this!)
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-
-# MQTT Broker
+# Production Environment Variables
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-make-it-long-and-complex
 MQTT_BROKER=mqtt://broker.hivemq.com
-
-# Server Port
 PORT=3001
-
-# Environment
-NODE_ENV=development
-
-# CORS (comma-separated origins for production)
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
+NODE_ENV=production
+ALLOWED_ORIGINS=*
