--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "komal",
+  "name": "smart-printer-backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "build": "echo 'Backend build complete'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["smart-printer", "vending", "backend"],
+  "author": "Your Name",
   "license": "ISC",
   "type": "commonjs",
-  "description": "",
+  "description": "Backend for Smart Printer Vending System",
   "dependencies": {
     "axios": "^1.6.0",
-    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
@@ -22,11 +22,12 @@
     "mqtt": "^5.13.3",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
