--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build": "echo 'Backend build complete'",
+    "build": "npm --prefix web-frontend run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": ["smart-printer", "vending", "backend"],
