--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "build": "npm --prefix web-frontend run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["smart-printer", "vending", "backend"],
+  "keywords": [
+    "smart-printer",
+    "vending",
+    "backend"
+  ],
   "author": "Your Name",
   "license": "ISC",
   "type": "commonjs",
   "description": "Backend for Smart Printer Vending System",
   "dependencies": {
     "axios": "^1.6.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
